# TradingAgents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: accounts.py  assets.py  auth.py  orders.py  portfolio.py  positions.py  research.py  risk.py  signals.py  snapshots.py  users.py
backend/app/brokers/: base.py  paper.py
backend/app/core/: config.py  db.py  permissions.py  security.py
backend/app/domain/: enums.py
backend/app/models/: __init__.py  account.py  asset.py  audit_event.py  auth_token.py  cash_ledger.py  fill.py  order.py  portfolio_snapshot.py  position.py  research_job.py  risk_decision.py  signal.py  user.py
backend/app/repositories/: account_repo.py  asset_repo.py  audit_repo.py  auth_token_repo.py  cash_ledger_repo.py  order_repo.py  position_repo.py  signal_repo.py  snapshot_repo.py  user_repo.py
backend/app/schemas/: asset.py  auth.py  order.py  position.py  research.py  signal.py  user.py
backend/app/services/: account_service.py  asset_service.py  audit_service.py  auth_service.py  order_service.py  portfolio_service.py  position_service.py  research_service.py  risk_service.py  signal_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_snapshots_and_audit.py  0003_add_accounts_and_cash_ledger.py  0004_add_auth_tables.py  0005_add_assets_table.py  0006_add_research_jobs.py
cli/: config.py  main.py  utils.py
(+43 files in other folders)
