[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "alembic>=1.13.0",
  "email-validator>=2.2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
